--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,15 @@ code {
   width: 650px;
 }
 
+.editActivityButtonforall {
+  text-decoration: none;
+  color: black;
+  padding-right: 5px;
+  padding-left: 5px;
+  background-color: rgb(220, 71, 165);
+  font-size: 14px;
+}
+
 /* MyRoutines Component */
 .myRoutinesLinks {
   text-decoration: none;
@@ -126,6 +135,10 @@ code {
 }
 
 /* AddRoutine Component */
+.addRoutineHeader {
+  margin-top: 5px;
+}
+
 .nameInput,
 .goalInput,
 .isPublicInput {
@@ -139,12 +152,32 @@ code {
   margin-right: 10px;
   background-color: rgb(220, 71, 165);
   border-radius: 10%;
-  font-style: italic;
-  font-weight: bold;
   font-size: 12px;
   border: none;
 }
 
 .addRoutineButton:hover {
+  cursor: pointer;
+}
+
+/* EditActivity Component */
+.editsHeader {
+  margin-top: 5px;
+  margin-bottom: 30px;
+}
+
+.editActivityButton {
+  text-decoration: none;
+  color: black;
+  padding: 5px;
+  margin-right: 10px;
+  background-color: rgb(220, 71, 165);
+  border-radius: 10%;
+  font-size: 12px;
+  border: none;
+  margin-top: 10px;
+}
+
+.editActivityButton:hover {
   cursor: pointer;
 }
